Make sure that the mark result is visible for all screen sizes

--- a/app/Resources/public/css/style.css
+++ b/app/Resources/public/css/style.css
@@ -137,9 +137,14 @@
 
 .mark-result  {
     min-width: 20em;
-    position: fixed;
-    right: 15%;
-    z-index: 2;
+}
+
+@media (min-width: 769px) and (min-height:780px) {
+    .mark-result {
+        position: fixed;
+        right: 15%;
+        z-index: 2;
+    }
 }
 
 .mark-exact-score {
